--- a/src/views/marketplace/Marketplace.scss
+++ b/src/views/marketplace/Marketplace.scss
@@ -43,6 +43,7 @@
 			flex-basis: 20%;
 
 			margin-right: 36px;
+			margin-bottom: 16px;
 
 			@media (max-width: $breakpoint-m) {
 				flex-basis: 100%;
