--- a/src/views/dashboard/widgets/RecentViews.scss
+++ b/src/views/dashboard/widgets/RecentViews.scss
@@ -9,5 +9,9 @@
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		margin-top: 8px;
+	}
+	span {
+		margin-bottom: 16px;
 	}
 }
