--- a/src/views/dashboard/widgets/RecentWork.scss
+++ b/src/views/dashboard/widgets/RecentWork.scss
@@ -5,6 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	cursor: pointer;
+	margin-top: 8px;
 
 	&-no-items {
 		display: flex;
@@ -24,6 +25,10 @@
 		.st-Typography {
 			&-h4 {
 				margin-bottom: 8px;
+
+				&:hover {
+					text-decoration: underline;
+				}
 			}
 
 			&-action1 {
@@ -34,6 +39,7 @@
 
 		&-stats {
 			margin-top: 16px;
+			margin-right: 120px;
 			display: flex;
 			justify-content: space-between;
 			align-items: center;
