--- a/src/views/guildatar/GuildatarContainer.scss
+++ b/src/views/guildatar/GuildatarContainer.scss
@@ -22,6 +22,10 @@
 			width: 100%;
 			align-items: center;
 
+			@media (max-width: $breakpoint-m) {
+				margin-bottom: 16px;
+			}
+
 			&-title {
 				display: flex;
 				flex-direction: column;
