--- a/src/views/stories/Stories.scss
+++ b/src/views/stories/Stories.scss
@@ -22,6 +22,11 @@
 		}
 	}
 
+	.st-FloatingInput {
+		margin-bottom: 0 !important;
+		margin-top: 16px;
+	}
+
 	&-header {
 		width: 100%;
 		display: flex;
