NT: added NoItemsPlaceholder for dashboard

--- a/src/views/dashboard/widgets/RecentWork.scss
+++ b/src/views/dashboard/widgets/RecentWork.scss
@@ -8,9 +8,8 @@
 	margin-top: 8px;
 
 	&-no-items {
-		display: flex;
-		align-items: center;
-		justify-content: center;
+		@include theme-aware('background-color', 'T100');
+		border-radius: 6px;
 	}
 
 	&-item {
