--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -67,6 +67,8 @@ $box-shadow-darkbtn: 0px 1px 4px rgba(0, 0, 0, 0.12), 0px 0px 0px 1px rgba(0, 0,
 $box-shadow-darkbtn-hover: 0px 1px 4px rgba(0, 0, 0, 0.12), 0px 0px 0px 1px rgba(0, 0, 0, 0.02),
 	0px 2px 4px 4px rgba(0, 0, 0, 0.08);
 
+$box-shadow-none: none;
+
 // FOCUS
 
 $focus: 0px 0px 0px 3px rgba(201, 143, 44, 0.24);
