--- a/src/views/signup/SignUp.scss
+++ b/src/views/signup/SignUp.scss
@@ -31,6 +31,11 @@
 		text-align: center;
 		margin-top: 16px;
 		@include theme-aware('color', 'T600');
+		text-decoration: none;
+
+		&:hover {
+			text-decoration: underline;
+		}
 	}
 
 	.st-IconButton {
