--- a/src/views/stories/StoryThumb.scss
+++ b/src/views/stories/StoryThumb.scss
@@ -7,7 +7,8 @@
 	border-radius: 6px;
 	margin: 8px 0;
 	height: 120px;
-	width: $story-preview-width-medium;
+	max-width: $story-preview-width-medium;
+	width: 100%;
 	cursor: pointer;
 	position: relative;
 	box-shadow: 2px 2px 12px rgba(35, 31, 26, 0.04);
@@ -17,10 +18,6 @@
 		position: absolute;
 		top: 4px;
 		right: 4px;
-	}
-
-	@media (max-width: $breakpoint-sm) {
-		width: $story-preview-width-small;
 	}
 
 	&:hover {
