TG-11: added placeholder for guildatars

--- a/src/views/guildatar/Guildatars.scss
+++ b/src/views/guildatar/Guildatars.scss
@@ -38,6 +38,10 @@
 			align-items: center;
 		}
 
+		&-placeholder {
+			height: 70vh;
+		}
+
 		&-avatar {
 			display: flex;
 			flex-direction: column;
