--- a/src/components/widgets/page-placeholder/PagePlaceholder.scss
+++ b/src/components/widgets/page-placeholder/PagePlaceholder.scss
@@ -3,7 +3,8 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	height: calc(100% - 200px);
+	height: 100%;
+	width: 100%;
 
 	svg {
 		margin-bottom: 36px;
