TG-17: added info when buying item in MarketplaceDialog

--- a/src/components/marketplace/MarketplaceDialog.scss
+++ b/src/components/marketplace/MarketplaceDialog.scss
@@ -13,11 +13,9 @@
 		min-height: 230px;
 	}
 
-	.st-Typography {
-		&-tertiary {
-			margin-bottom: 8px;
-			font-size: 12px;
-		}
+	&-category {
+		margin: 8px 0;
+		font-size: 12px;
 	}
 
 	&-dialog {
