TG-20: add placeholder for no items in guildatar

--- a/src/components/widgets/horizontal-list/HorizontalList.scss
+++ b/src/components/widgets/horizontal-list/HorizontalList.scss
@@ -4,7 +4,10 @@
 .st-HorizontalList {
 	display: flex;
 	flex-direction: column;
-	overflow-x: auto;
+
+	@media (max-width: $breakpoint-m) {
+		overflow-x: auto;
+	}
 
 	&-items {
 		display: flex;
