--- a/src/views/guildatar/GuildatarContainer.scss
+++ b/src/views/guildatar/GuildatarContainer.scss
@@ -114,6 +114,11 @@
 					border-radius: 6px;
 					@include theme-aware('border-color', 'G100');
 					padding: 24px;
+
+					&-action {
+						margin-top: 24px;
+						text-align: center;
+					}
 				}
 			}
 		}
@@ -129,6 +134,12 @@
 
 				@media (max-width: $breakpoint-sm) {
 					justify-content: space-evenly;
+				}
+			}
+
+			&-loader {
+				@media (max-width: $breakpoint-sm) {
+					min-height: 146px;
 				}
 			}
 		}
