--- a/src/components/widgets/mobile-wrapper/MobileWrapper.scss
+++ b/src/components/widgets/mobile-wrapper/MobileWrapper.scss
@@ -4,6 +4,6 @@
 	@media (max-width: $breakpoint-m) {
 		max-width: $story-preview-width-medium;
 		margin: 0 auto;
-		margin-bottom: 60px;
+		padding-bottom: 60px;
 	}
 }
