--- a/src/views/marketplace/Marketplace.scss
+++ b/src/views/marketplace/Marketplace.scss
@@ -10,11 +10,23 @@
 		justify-content: space-between;
 		margin-top: 32px;
 
-		.st-FloatingInput {
-			margin-bottom: 0 !important;
+		&-actions {
+			display: flex;
+			align-items: center;
 
 			@media (max-width: $breakpoint-m) {
-				width: 100%;
+				flex-direction: row-reverse;
+			}
+
+			.st-FloatingInput {
+				margin-bottom: 0 !important;
+				margin-left: 24px;
+
+				@media (max-width: $breakpoint-m) {
+					width: 100%;
+					margin-left: 0;
+					margin-right: 12px;
+				}
 			}
 		}
 
