--- a/src/views/dashboard/widgets/NoItemsPlaceholder.scss
+++ b/src/views/dashboard/widgets/NoItemsPlaceholder.scss
@@ -15,6 +15,12 @@
 		}
 	}
 
+	&-border {
+		border: 1px solid;
+		border-radius: 6px;
+		@include theme-aware('border-color', 'B100');
+	}
+
 	.st-IconButton {
 		margin-top: 16px;
 	}
