--- a/src/components/widgets/loadmore/LoadMore.scss
+++ b/src/components/widgets/loadmore/LoadMore.scss
@@ -5,7 +5,7 @@
 
 .st-LoadMore {
 	&-modal {
-		max-height: 500px;
+		max-height: $story-preview-width-small;
 		height: 100%;
 		overflow-y: auto;
 		@include scrollbars(6px, 'G200', 'G100');
