--- a/src/components/widgets/loadmore/LoadMore.scss
+++ b/src/components/widgets/loadmore/LoadMore.scss
@@ -9,6 +9,10 @@
 		height: 100%;
 		overflow-y: auto;
 		@include scrollbars(6px, 'G200', 'G100');
+
+		@media (max-width: $breakpoint-sm) {
+			max-height: 100%;
+		}
 	}
 
 	&-pagination {
