--- a/src/views/login/Password.scss
+++ b/src/views/login/Password.scss
@@ -18,10 +18,10 @@
 	}
 
 	h4 {
-		font-family: $font-merriweather;
-		font-weight: 900;
-		font-size: 24px;
 		margin-bottom: 24px;
-		@include theme-aware('color', 'G900');
+	}
+
+	.st-IconButton {
+		width: 100%;
 	}
 }
