--- a/src/views/dashboard/widgets/RecentItems.scss
+++ b/src/views/dashboard/widgets/RecentItems.scss
@@ -28,7 +28,7 @@
 			margin-left: 12px;
 
 			.st-Typography {
-				&-action1 {
+				&-variant__action1 {
 					margin-top: 8px;
 				}
 			}
@@ -49,7 +49,7 @@
 		}
 	}
 
-	.st-Typography-bold {
+	.st-Typography-weight__bold {
 		margin-bottom: 16px;
 	}
 }
