--- a/src/components/widgets/page-placeholder/PagePlaceholder.scss
+++ b/src/components/widgets/page-placeholder/PagePlaceholder.scss
@@ -10,7 +10,7 @@
 		margin-bottom: 36px;
 	}
 
-	.st-Typography-action1 {
+	.st-Typography-variant__action1 {
 		max-width: 356px;
 		text-align: center;
 	}
