--- a/src/views/marketplace/Marketplace.scss
+++ b/src/views/marketplace/Marketplace.scss
@@ -72,8 +72,14 @@
 				display: flex;
 				flex-wrap: wrap;
 
-				@media (max-width: $breakpoint-sm) {
-					justify-content: space-evenly;
+				@media (max-width: $breakpoint-m) {
+					justify-content: center;
+				}
+
+				&-placeholder {
+					width: $market-item-width-large;
+					height: $market-item-height;
+					margin: 0 16px 16px 0;
 				}
 			}
 
