FTR-34: improvements on guildatars, dashboard, empty states, spaces and hovers

--- a/src/components/marketplace/MarketplaceDialog.scss
+++ b/src/components/marketplace/MarketplaceDialog.scss
@@ -21,7 +21,16 @@
 	&-dialog {
 		.modal {
 			&-footer {
-				justify-content: space-between;
+				justify-content: center;
+
+				@media (max-width: $breakpoint-sm) {
+					.st-IconButton {
+						width: 136px;
+					}
+					.btn-secondary {
+						margin-left: 0;
+					}
+				}
 			}
 		}
 	}
