--- a/src/components/widgets/page-placeholder/PagePlaceholder.scss
+++ b/src/components/widgets/page-placeholder/PagePlaceholder.scss
@@ -5,6 +5,7 @@
 	align-items: center;
 	height: 100%;
 	width: 100%;
+	margin: 48px 0;
 
 	svg {
 		margin-bottom: 36px;
@@ -16,6 +17,6 @@
 	}
 
 	.st-IconButton {
-		margin-top: 36px;
+		margin-top: 24px;
 	}
 }
