--- a/src/views/dashboard/widgets/RecentItems.scss
+++ b/src/views/dashboard/widgets/RecentItems.scss
@@ -45,7 +45,7 @@
 		}
 
 		&:hover {
-			@include theme-aware('background-color', 'G100');
+			@include theme-aware('background-color', 'B100');
 		}
 	}
 
