--- a/src/views/guildatar/GuildatarContainer.scss
+++ b/src/views/guildatar/GuildatarContainer.scss
@@ -133,7 +133,7 @@
 				margin-top: 12px;
 
 				@media (max-width: $breakpoint-sm) {
-					justify-content: space-evenly;
+					justify-content: left;
 				}
 			}
 
