--- a/src/views/user/UserProfile.scss
+++ b/src/views/user/UserProfile.scss
@@ -37,6 +37,7 @@
 				@media (max-width: $breakpoint-sm) {
 					align-items: center;
 					margin-bottom: 24px;
+					text-align: center;
 				}
 
 				span {
