--- a/src/views/dashboard/widgets/NoItemsPlaceholder.scss
+++ b/src/views/dashboard/widgets/NoItemsPlaceholder.scss
@@ -5,12 +5,15 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	text-align: center;
 	flex-direction: column;
-	padding: 24px;
+	padding: 36px;
+	margin-top: 16px;
 
 	&-background {
 		&__primary {
-			@include theme-aware('background-color', 'T100');
+			@include theme-aware('background-color', 'B100');
+			box-shadow: $box-shadow-light;
 			border-radius: 6px;
 		}
 	}
@@ -19,9 +22,10 @@
 		border: 1px solid;
 		border-radius: 6px;
 		@include theme-aware('border-color', 'B100');
+		margin-bottom: 80px;
 	}
 
 	.st-IconButton {
-		margin-top: 16px;
+		margin-top: 24px;
 	}
 }
