--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -84,4 +84,9 @@ $story-preview-shadow: $box-shadow-light;
 // MARKETPLACE
 $market-item-width-large: 180px;
 $market-item-width-small: 160px;
-$market-item-height: 240px;
+$market-item-height-large: 240px;
+$market-item-height-small: 120px;
+$market-image-width-large: 120px;
+$market-image-width-small: 80px;
+$market-image-height-large: 120px;
+$market-image-height-small: 80px;
