--- a/src/views/user/followers/Followers.scss
+++ b/src/views/user/followers/Followers.scss
@@ -2,6 +2,15 @@
 @import 'styles/themes/mixins.scss';
 
 .st-Followers {
+	&.disabled {
+		pointer-events: none;
+		cursor: not-allowed;
+
+		&:hover {
+			background-color: transparent;
+		}
+	}
+
 	&-info {
 		display: flex;
 		flex-direction: column;
