--- a/src/views/dashboard/widgets/RecentItems.scss
+++ b/src/views/dashboard/widgets/RecentItems.scss
@@ -16,8 +16,8 @@
 
 		.st-Image {
 			&-container {
-				width: 80px;
-				height: 80px;
+				width: $market-image-width-small;
+				height: $market-image-height-small;
 				background: none;
 			}
 		}
@@ -45,7 +45,7 @@
 		}
 
 		&:hover {
-			@include theme-aware('background-color', 'G100');
+			@include theme-aware('background-color', 'B100');
 		}
 	}
 
