--- a/src/views/guildatar/Guildatars.scss
+++ b/src/views/guildatar/Guildatars.scss
@@ -34,6 +34,7 @@
 		margin-top: 32px;
 
 		@media (max-width: $breakpoint-m) {
+			flex-wrap: nowrap;
 			flex-direction: column;
 			align-items: center;
 		}
@@ -49,10 +50,17 @@
 			box-shadow: $box-shadow-default;
 			margin: 0 16px 16px 0;
 			border-radius: 6px;
+			border: 1px solid;
 			padding: 24px;
 			max-width: 236px;
 			width: 100%;
 			@include theme-aware('background-color', 'B100');
+			@include theme-aware('border-color', 'B100');
+
+			@media (max-width: $breakpoint-m) {
+				max-width: none;
+				margin: 0 0 12px 0;
+			}
 
 			.st-Guildatar {
 				width: 200px;
@@ -77,7 +85,7 @@
 			}
 
 			&:hover {
-				@include theme-aware('background-color', 'B300');
+				@include theme-aware('border-color', 'T600');
 			}
 		}
 	}
