TG-39: added landing page

--- a/src/components/nav/DesktopNav.scss
+++ b/src/components/nav/DesktopNav.scss
@@ -49,6 +49,13 @@
 		}
 	}
 
+	&-logged-out {
+		width: 100%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
 	&-status {
 		justify-content: flex-end;
 
