TG-34: updates of footer in MarkplaceDialog, background color update for notification and guildatar changes to old sizes

--- a/src/components/marketplace/MarketplaceDialog.scss
+++ b/src/components/marketplace/MarketplaceDialog.scss
@@ -21,9 +21,20 @@
 	&-dialog {
 		.modal {
 			&-footer {
-				justify-content: center;
+				justify-content: space-between;
+				align-items: center;
+				text-align: center;
+
+				div {
+					display: flex;
+
+					svg {
+						vertical-align: bottom;
+					}
+				}
 
 				@media (max-width: $breakpoint-sm) {
+					justify-content: center;
 					.st-IconButton {
 						width: 136px;
 					}
