--- a/src/components/widgets/loadmore/LoadMore.scss
+++ b/src/components/widgets/loadmore/LoadMore.scss
@@ -15,7 +15,22 @@
 		}
 	}
 
-	&-pagination {
+	&-placeholder {
+		height: 20px;
+
+		@media (max-width: $breakpoint-sm) {
+			max-height: 60px;
+		}
+	}
+
+	&-loadmore {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: center;
+	}
+
+	&-loader {
 		display: flex;
 		justify-content: center;
 		margin: 16px 0;
