--- a/src/LandingPage.scss
+++ b/src/LandingPage.scss
@@ -48,6 +48,7 @@ $svg-max-width: 300px;
 
 		&-image {
 			margin-top: 48px;
+			max-width: 100%;
 		}
 	}
 
@@ -103,7 +104,7 @@ $svg-max-width: 300px;
 		margin: 24px 0;
 
 		&-image {
-			width: 100%;
+			max-width: 100%;
 			height: 100%;
 		}
 	}
@@ -146,12 +147,6 @@ $svg-max-width: 300px;
 
 		&-community {
 			padding-bottom: 0;
-
-			.st-LandingPage-item-image {
-				@media (max-width: $breakpoint-m) {
-					width: 100%;
-				}
-			}
 		}
 
 		@media (max-width: $breakpoint-m) {
