--- a/src/components/nav/DesktopNav.scss
+++ b/src/components/nav/DesktopNav.scss
@@ -59,18 +59,6 @@
 	&-status {
 		justify-content: flex-end;
 
-		.st-IconButton {
-			margin-right: 12px;
-
-			&-link {
-				margin-right: 24px;
-			}
-
-			&:last-child {
-				margin-right: 0;
-			}
-		}
-
 		.st-Notifications {
 			margin-right: 24px;
 		}
@@ -82,6 +70,11 @@
 		&-signedOut {
 			display: flex;
 			align-items: center;
+
+			&-link {
+				font-weight: 600;
+				margin-right: 36px;
+			}
 
 			@media (max-width: $breakpoint-sm) {
 				padding: 10px 0;
