--- a/src/LandingPage.scss
+++ b/src/LandingPage.scss
@@ -61,6 +61,10 @@ $svg-max-width: 300px;
 
 		&-title {
 			letter-spacing: 2px;
+
+			&:hover {
+				text-decoration: none;
+			}
 		}
 
 		&-heading {
@@ -73,6 +77,7 @@ $svg-max-width: 300px;
 		}
 
 		&-subheading {
+			text-align: center;
 			font-weight: 500;
 			max-width: $story-preview-width-large;
 		}
@@ -220,6 +225,10 @@ $svg-max-width: 300px;
 		flex-direction: column;
 		align-items: center;
 
+		&-placeholder {
+			margin: 100px 0;
+		}
+
 		&-heading {
 			@media (max-width: $breakpoint-m) {
 				font-size: 36px;
@@ -228,7 +237,11 @@ $svg-max-width: 300px;
 
 		&-action {
 			padding: 12px 20px;
-			margin-bottom: 96px;
+		}
+
+		&-link {
+			font-weight: 400;
+			@include theme-aware('color', 'G400');
 		}
 	}
 }
