--- a/src/LandingPage.scss
+++ b/src/LandingPage.scss
@@ -54,9 +54,6 @@ $svg-max-width: 300px;
 
 	&-header {
 		margin-top: 50px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
 		text-align: center;
 
 		&-title {
@@ -78,12 +75,14 @@ $svg-max-width: 300px;
 
 		&-subheading {
 			text-align: center;
+			margin: 0 auto;
 			font-weight: 500;
 			max-width: $story-preview-width-large;
 		}
 
 		&-actions {
 			display: flex;
+			justify-content: center;
 			margin-top: 32px;
 
 			.st-IconButton {
