--- a/src/views/login/ProviderLogin.scss
+++ b/src/views/login/ProviderLogin.scss
@@ -1,45 +1,5 @@
-@import '../../styles/variables.scss';
-
 .st-ProviderLogin {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	height: calc(100% - 200px);
-
-	@media (max-width: $breakpoint-sm) {
-		flex-direction: column;
-	}
-
-	&-icon {
-		flex: 1 1 0;
-		display: flex;
-		justify-content: center;
-		height: 100%;
-
-		.st-Icon {
-			background: none;
-		}
-	}
-
-	&-text {
-		flex: 1 1 0;
-		display: flex;
-		flex-direction: column;
-
-		@media (max-width: $breakpoint-sm) {
-			align-items: center;
-		}
-
-		> span {
-			margin-bottom: 16px;
-
-			&:nth-child(2) {
-				margin-bottom: 56px;
-			}
-		}
-
-		&-button {
-			display: flex;
-		}
+	&-placeholder {
+		height: 80vh;
 	}
 }
